--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<!-- https://source.unsplash.com/MP0IUfwrn0A -->
 			<div style="background-image: url('profile.jpg')"></div>
 			
-			<h1 class="name">Chintan Raiyani</h1>
+			<h1 class="name"><a href="https://chintan-raiyani.herokuapp.com/">Chintan Raiyani</a></h1>
 			<div></div>
 			<p class="job">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9 12H1v6a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-6h-8v2H9v-2zm0-1H0V5c0-1.1.9-2 2-2h4V2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v1h4a2 2 0 0 1 2 2v6h-9V9H9v2zm3-8V2H8v1h4z"/></svg> 
@@ -44,7 +44,7 @@
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z"/></svg>
                  Bangalore, India
             </p>
-			<p class="short-intro">For last few years, I have been working mostly on AI, MaL and Deep Learning related projects. I have also jumped into some Reinforcement Learning and Computer Vision projects. I also have professional experience in backend and front-end technologies. I am passionate about clean and elegant code. Also experienced in production of high-loaded modern web systems.</p>
+			<p class="short-intro">For last few years, I have been working mostly on AI, MaL and Deep Learning related projects. I have also jumped into some Reinforcement Learning and Computer Vision projects. I also have professional experience in backend and front-end technologies. I am passionate about clean and elegant code. Also experienced in production of high-loaded modern web systems. <a href="https://chintan-raiyani.herokuapp.com/" style="color: #2c7a7b;">Find out more about me.</a></p>
 
 			<!-- <div class="contact">
 				<button>
